# Layendanimator

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  README.md  dev-app-update.yml  ffmpegmove.js  nodemon.json  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  publish.yml
electron/: configureDev.ts  index.ts  mainWindow.ts  preload.ts
electron/IPC/: fileSystem.ts  systemInfo.ts  updaterInfo.ts
electron/IPC/General/: IPC.ts  channelsInterface.ts  contextBridge.ts
src/: app.css  app.d.ts  app.html  global.d.ts  nprogress.css  prefetch.ts  shims.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  discord.rs  main.rs  menu.rs
src/hooks/: index.ts
src/lib/: Counter.svelte  Greet.svelte  modules.ts  prefetch.ts
src/lib/GraphQL/: README.md  animeFeatured.ts  animeSearch.ts  frontPage.ts  getAnime.ts
src/lib/components/: Anime.svelte  AnimeCard.svelte  AnimeCardSmall.svelte  AnimeContextMenu.svelte  AnimeInfo.svelte  AnimePage.svelte  BackArrow.svelte  Carousel.svelte  CarouselPlayer.svelte  CharacterCard.svelte  Content.svelte  ContextMenu.svelte  DownloadsData.svelte  Episode.svelte  EpisodeCard.svelte  EpisodeCarousel.svelte  EpisodeContextMenu.svelte  ExternalAnimeCard.svelte  GridContent.svelte  InfiniteScroll.svelte  InfoElectron.svelte  JsSandbox.svelte  NavBar.svelte  NavigationComponents.svelte  NotificationPile.svelte  PlaceholderAnimeCard.svelte  PlaceholderCarousel.svelte  PlayNextButton.svelte  Player.svelte  PlayerContextMenu.svelte  ProviderCreator.svelte  ScrollCarousel.svelte  ScrollHeader.svelte  SearchAnime.svelte  SearchBar.svelte  Section.svelte  SourceButton.svelte  SourceButtonButton.svelte  SourceContextMenu.svelte  SourceInfoButton.svelte  (+10 more)
src/lib/components/carousel/: Carousel.svelte
src/lib/header/: Header.svelte
src/lib/model/: Anime.ts  anime.ts  cache.ts  connections.ts  contextmenu.ts  downloads.ts  fetch.ts  global.ts  history.ts  info.ts  library.ts  notifications.ts  searchHistory.ts  settings.ts  source.ts  sources.ts  subscriptions.ts  theme.ts  updates.ts  util.ts  watch.ts
src/lib/player/: Episode.svelte  EpisodeHolder.svelte  Player.svelte
src/model/: settings.ts
src/params/: integer.ts
src/routes/: +error.svelte  +layout-root.svelte  +layout.svelte  +layout.ts  +layout@root.svelte  +page.svelte  +page.ts  __error.svelte  __layout-root.svelte  __layout.svelte  __layout@root.svelte  about.svelte  index.svelte
src/routes/(general)/: +layout.svelte  +page.svelte  +page.ts
src/routes/[id=integer]/: +page.svelte  index.svelte
src/routes/[id]/: +page.svelte  +page.ts  index.svelte
src/routes/[source]/: +layout.svelte  +page.svelte  +page.ts
src/routes/callback/: +page.svelte  index.svelte
src/routes/connect/: +page.svelte
src/routes/help/: index.svelte
src/routes/player/: __layout.reset.svelte  index.svelte
src/routes/popular/: +page.svelte  +page.ts
src/routes/recent/: +page.svelte  +page.ts
src/routes/search/: +page.svelte  +page.ts  index.svelte
src/routes/settings/: +page.svelte  index.svelte
src/routes/todos/: index.svelte
src/routes/trending/: +page.ts
static/: robots.txt  splashscreen.html
static/layendanimator-base/: info.json
static/layendanimator-base/crunchyroll/: source.js
static/layendanimator-base/gogoanime/: source.js
static/layendanimator-base/zoro/: source.js
svelte/: package-lock.json  package.json  svelte.config.js  tsconfig.json
svelte/src/: app.css
svelte/src/routes/: __layout.svelte  index.svelte
svelte/static/: loading.html
(+90 files in other folders)
