[package]
name = "layendanimator"
version = "0.0.1"
description = "Layendanimator"
authors = ["Layendan"]
license = ""
repository = ""
default-run = "layendanimator"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# TODO: remove devtools dependency for safety reasons
tauri = { version = "1.0.0", features = ["api-all", "devtools", "macos-private-api", "updater"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
